# Nput

./: .gitignore  CHANGELOG.md  README.md  build.sh
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: main.rs  state.rs  web.rs
backend/src/input/: controller.rs  keyboard.rs  mod.rs
backend/src/server/: mod.rs
config/: controller-layout.json  keyboard-layout.json  layout.json
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.web.json
frontend/src/: index.html  main.ts  preload.ts  renderer.ts  web-renderer.ts
shared/: schema.ts
tools/: layout-editor.html
web/: index.html  web-renderer.js
