[package]
name = "nput-backend"
version = "0.1.0"
edition = "2021"
description = "Nput input engine — reads keys/buttons, serves state over WebSocket and HTTP"

[[bin]]
name = "nput-backend"
path = "src/main.rs"

[dependencies]
# Async runtime — the backbone of everything concurrent here
tokio = { version = "1", features = ["full"] }

# WebSocket server for talking to the Electron frontend
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP server for the OBS / browser overlay
# Serves the web renderer, assets, and layout.json on port 8766
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Controller support — handles gamepads, sticks, triggers, the whole deal
gilrs = "0.10"

# Global keyboard listener — works on Linux (evdev/X11), Windows, macOS
rdev = "0.5"

# Serialization — turns our state structs into JSON for the wire
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging — because println! doesn't cut it when things go sideways
log = "0.4"
env_logger = "0.10"

# Direct kernel input device access on Linux.
# Reads from /dev/input/event* so keys register even when a game holds
# an exclusive X11 keyboard grab (which blinds XRecord/rdev).
# Requires the user to be in the `input` group:
#   sudo usermod -aG input $USER   (then re-login)
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
